small correction mobile version

--- a/style.css
+++ b/style.css
@@ -742,6 +742,18 @@ footer {
           }
           /* FOOTER END */
 
+          .category-news-label {
+            margin-left: auto;
+            margin-right: auto;
+            background-color: #333;
+            color: white;
+            text-align: center;
+            width: 620px;
+            padding: 10px;
+            font-size: 40px;
+            border-radius: 10px;
+          }
+
           .twitter-tweet {
             margin-left: auto;
             margin-right: auto;
@@ -1143,6 +1155,18 @@ footer {
      }
      /* Search END */
 
+     .category-news-label {
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #333;
+        color: white;
+        text-align: center;
+        width: 280px;
+        padding: 10px;
+        font-size: 25px;
+        border-radius: 10px;
+      }
+
      .twitter-tweet {
         justify-content: center;
         display: block;
@@ -1502,6 +1526,20 @@ footer {
          font-weight: bold;
      }
      /* Search END */
+     
+     
+     .category-news-label {
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #333;
+        color: white;
+        text-align: center;
+        width: 250px;
+        padding: 10px;
+        font-size: 20px;
+        border-radius: 10px;
+      } 
+
 }
 
 
@@ -1849,6 +1887,18 @@ footer {
          font-weight: bold;
      }
      /* Search END */
+
+     .category-news-label {
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #333;
+        color: white;
+        text-align: center;
+        width: 220px;
+        padding: 10px;
+        font-size: 18px;
+        border-radius: 10px;
+      } 
 
      .twitter-tweet {
         justify-content: center;
